--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "normalize.css": "^8.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-draggable": "^4.5.0",
     "theme-ui": "^0.17.2",
     "uuid": "^11.1.0",
     "zustand": "^5.0.7"
