--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^8.9.2",
     "@mui/x-date-pickers": "^8.10.2",
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.12.2",
     "dayjs": "^1.11.13",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
