--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
